hphp/hack/test/typecheck/expression_trees/boolean_check.php.exp
ERROR: File "boolean_check.php", line 27, characters 11-25:
`ExampleMixedOpType` cannot be used as a boolean (it has no instance method named `__bool`) (Typing[4053])
ERROR: File "boolean_check.php", line 28, characters 11-25:
`ExampleMixedOpType` cannot be used as a boolean (it has no instance method named `__bool`) (Typing[4053])
ERROR: File "boolean_check.php", line 34, characters 16-30:
`ExampleMixedOpType` cannot be used as a boolean (it has no instance method named `__bool`) (Typing[4053])
ERROR: File "boolean_check.php", line 37, characters 16-30:
`ExampleMixedOpType` cannot be used as a boolean (it has no instance method named `__bool`) (Typing[4053])
ERROR: File "boolean_check.php", line 45, characters 13-27:
`ExampleMixedOpType` cannot be used as a boolean (it has no instance method named `__bool`) (Typing[4053])
ERROR: File "boolean_check.php", line 48, characters 13-27:
`ExampleMixedOpType` cannot be used as a boolean (it has no instance method named `__bool`) (Typing[4053])
ERROR: File "boolean_check.php", line 49, characters 20-34:
`ExampleMixedOpType` cannot be used as a boolean (it has no instance method named `__bool`) (Typing[4053])
ERROR: File "boolean_check.php", line 50, characters 14-28:
`ExampleMixedOpType` cannot be used as a boolean (it has no instance method named `__bool`) (Typing[4053])
ERROR: File "boolean_check.php", line 51, characters 20-34:
`ExampleMixedOpType` cannot be used as a boolean (it has no instance method named `__bool`) (Typing[4053])
ERROR: File "boolean_check.php", line 59, characters 7-21:
`ExampleMixedOpType` cannot be used as a boolean (it has no instance method named `__bool`) (Typing[4053])
ERROR: File "boolean_check.php", line 62, characters 7-18:
`ExampleStringOpType` cannot be used as a boolean (it has no instance method named `__bool`) (Typing[4053])
